[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
pktparse = "0.7.1"
clap = { version = "3.2.14", features = ["derive"] }
colored = "2.0.0"
timer = "0.2.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
