[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
pktparse = "0.7.1"
dns-parser = "0.8.0"
clap = { version = "3.2.14", features = ["derive"] }
colored = "2.0.0"
chrono = "0.4.20"
tokio = { version = "1.20.1", features = ["full"] }
#network-interface = "0.1.2"
#serde = { version = "1.0.142", features = ["derive"] }
#serde_json = "1.0.83"
#serde_yaml = "0.9.4"